Enjoy toooting! This version includes following improvements and fixes:
- Align filter experience with v4.0 and above