@@ -1,2 +1,3 @@
 toooting愉快！此版本包括以下改进和修复：
 - 改进过滤体验，与v4.0以上版本一致
+- 支持查看用户的头像和横幅图片
