@@ -1,2 +1,3 @@
 Enjoy toooting! This version includes following improvements and fixes:
 - Align filter experience with v4.0 and above
+- Supports enlarging user's avatar and banner
